# Procrastinate-No-More

./: CHANGELOG  CMakeLists.txt  README  README.md  THANKS  plasma-applet-procrastinate-no-more.desktop
images/: CMakeLists.txt  work_state.svgz
src/: CMakeLists.txt  tomat.cpp  tomat.h
